# firelight

./: Cargo.toml  README.md
.cargo/: config
debian/: postinst  prerm
examples/: lightingd-dummy.rs
src/: args.rs  cmdline_args.rs  control_msg.rs  controller.rs  daemon.rs  firelight_api.rs  hw_controller.rs  ledstrip.rs  lib.rs  lightingd.rs  renderer.rs
systemd/: firelight-daemon.service  firelight-rest.service
