[package]
name = "firelight"
version = "0.1.0"
edition = "2021"

[dependencies]
ws281x = { git = "https://github.com/lava/rust-ws281x", branch="raspberry-zero-w" }
rouille = "3.5.0"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
anyhow = "1.0.53"

[lib]
name = "firelight"
path = "src/lib.rs"
