[package]
name = "firelight"
description = "Drive a ws2811 LED strip in flame pattern"
authors = ["Benno Evers"]
license = "AGPL-3.0-only"
version = "0.2.0"
edition = "2021"

[dependencies]
ws281x = { git = "https://github.com/lava/rust-ws281x", branch="raspberry-zero-w" }
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
anyhow = "1.0.53"
noise = "0.7.0"
# Dependencies only required by the binaries.
rouille = "3.5.0"
clap = { version = "3.0.13", features = ["derive"]}

[lib]
name = "firelight"
path = "src/lib.rs"

[package.metadata.deb.systemd-units]
unit-scripts = "systemd/"
maintaner-scripts = "debian/"
enable = false
start = false
