[package]
name = "firelight"
description = "Drive a ws2811 LED strip in flame pattern"
readme = "README.md"
authors = ["Benno Evers"]
license = "AGPL-3.0-only"
version = "1.1.1"
edition = "2021"

[dependencies]
ws281x = { git = "https://github.com/lava/rust-ws281x", branch="raspberry-zero-w" }
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.78"
anyhow = "1.0.53"
noise = "0.7.0"
palette = "0.6.0"
# Dependencies only required by the binaries.
rouille = "3.5.0"
clap = { version = "3.0.13", features = ["derive"]}

[lib]
name = "firelight"
path = "src/lib.rs"

[package.metadata.deb]
maintainer-scripts = "debian/"
# We can't use the defaults because we want two service files,
# so we also have to manually list the binaries.
assets = [
  ["systemd/firelight-daemon.service", "/lib/systemd/system/firelight-daemon.service", "644"],
  ["systemd/firelight-rest.service", "/lib/systemd/system/firelight-rest.service", "644"],
  ["target/release/firelight-rest", "/usr/bin/firelight-rest", "755"],
  ["target/release/firelight-daemon", "/usr/sbin/firelight-daemon", "755"]
]
